--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
   "author": "Yaodong Li <ydli@thoughtworks.com>",
   "license": "MIT",
   "scripts": {
-    "start": "http-server -c-1 ./src"
+    "start": "http-server -c-1 ./docs"
   }
 }
