--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
   "author": "Yaodong Li <ydli@thoughtworks.com>",
   "license": "MIT",
   "scripts": {
-    "start": "http-server -c-1 ./docs"
+    "start": "parcel ./src/index.html",
+    "build": "parcel build ./src/index.html -d ./docs"
+  },
+  "dependencies": {
+    "parcel-bundler": "^1.8.1",
+    "three": "^0.92.0",
+    "three.ar.js": "^0.1.8"
   }
 }
