--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel ./src/index.html",
-    "build": "parcel build ./src/index.html -d ./docs"
+    "build": "parcel build ./src/index.html -d ./docs --public-url ./"
   },
   "dependencies": {
     "parcel-bundler": "^1.8.1",
